TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2011-08-24 MickeM
 * Sever refactoring of the new API (there is now two pb files ipc for NSCP protocol and plugin for plugin communication)
 * Cleaned up API helper functions
 * Fixed client argument for "client mode" to allow arbitrary arguments
 * Cleaned up the argument processor code now requires "mode" to be first argument
 * Fixed some issues in the NSCPClient

2011-08-23 MickeM
 * Fixed issue in the NSCP server

2011-08-22 MickeM
 * Added initial NSCP protocol implenmentation (very vrude and not really usefull yet)
 * Fixed so it builds on linux
 * Fixed so automagic plugin renaming add lib<LIB name> on *nix.
 * Fixed so it works on linux (fixed issues with timeout)

2011-08-16 MickeM
 * Added support for remote WMI checking using target/username/password options like so:
    CheckWMI target=192.168.0.123 user=\\foobar password=foobar namespace=root\\cimv2 MaxCrit=3 MinWarn=1 "Query:load=Select * from win32_Processor"
 * Added support for looking up targets to CheckWMI
   CheckWMI target=my_test_xp MaxCrit=3 MinWarn=1 "Query:load=Select * from win32_Processor"
   Where <target> is defined under /settings/targets as well as /settings/targets/my_test_xp

2011-08-15 MickeM
 * Readded allowed hosts function
 * Moved default socket options to /settings/default/socket
 * Added more default socket options
 * Added support for target in default plugin helpers
 * Added remote WMI commands
 * Added target section under /settings/targets

2011-08-14 MickeM
 * NRPEClient now works on linux
 * Added "portable" settings map file to installer (so it will work with old installed versions)
 * Rename Function to Registry in PythonScript API as well as some other function renames