@@ -53,6 +53,7 @@ bool NSCPClient::loadModuleEx(std::wstring alias, NSCAPI::moduleLoadMode mode) {
 	try {
 
 		get_core()->registerCommand(_T("query_nscp"), _T("Submit a query to a remote host via NSCP"));
+		get_core()->registerCommand(_T("submit_nscp"), _T("Submit a query to a remote host via NSCP"));
 		//"/settings/NSCP/client/handlers"
 		sh::settings_registry settings(get_settings_proxy());
 		settings.set_alias(_T("NSCP"), alias, _T("client"));
@@ -94,14 +95,27 @@ bool NSCPClient::loadModuleEx(std::wstring alias, NSCAPI::moduleLoadMode mode) {
 	return true;
 }
 
-void NSCPClient::add_options(po::options_description &desc, nscp_connection_data &command_data) {
+void NSCPClient::add_common_options(po::options_description &desc, nscp_connection_data &command_data) {
 	desc.add_options()
 		("host,H", po::wvalue<std::wstring>(&command_data.host), "The address of the host running the NSCP daemon")
 		("port,p", po::value<int>(&command_data.port), "The port on which the daemon is running (default=5668)")
-		("command,c", po::wvalue<std::wstring>(&command_data.command), "The name of the command that the remote daemon should run")
 		("timeout,t", po::value<int>(&command_data.timeout), "Number of seconds before connection times out (default=10)")
-		("no-ssl,n", po::value<bool>(&command_data.no_ssl)->zero_tokens()->default_value(false), "Do not initial an ssl handshake with the server, talk in plaintext.")
+		("no-ssl,n", po::value<bool>(&command_data.no_ssl)->zero_tokens()->default_value(false), "Do not initial an ssl handshake with the server, talk in plain text.")
+		("query,q", po::bool_switch(&command_data.query), "Force query mode (only useful when this is not obvious)")
+		("submit,s", po::bool_switch(&command_data.submit), "Force submit mode (only useful when this is not obvious)")
+		;
+}
+void NSCPClient::add_query_options(po::options_description &desc, nscp_connection_data &command_data) {
+	desc.add_options()
+		("command,c", po::wvalue<std::wstring>(&command_data.command), "The name of the command that the remote daemon should run")
 		("arguments,a", po::wvalue<std::vector<std::wstring> >(&command_data.arguments), "list of arguments")
+		;
+}
+void NSCPClient::add_submit_options(po::options_description &desc, nscp_connection_data &command_data) {
+	desc.add_options()
+		("command,c", po::wvalue<std::wstring>(&command_data.command), "The name of the command that the remote daemon should run")
+		("message,m", po::wvalue<std::wstring>(&command_data.message), "Message")
+		("result,r", po::value<unsigned int>(&command_data.result), "Result code")
 		;
 }
 
@@ -114,8 +128,12 @@ void NSCPClient::add_command(std::wstring key, std::wstring args) {
 		NSCPClient::nscp_connection_data command_data;
 		boost::program_options::variables_map vm;
 
-		po::options_description desc("Allowed options");
-		add_options(desc, command_data);
+		po::options_description common("Common options");
+		add_common_options(common, command_data);
+		po::options_description query("Query options");
+		add_query_options(query, command_data);
+		po::options_description submit("Submit options");
+		add_submit_options(submit, command_data);
 
 		po::positional_options_description p;
 		p.add("arguments", -1);
@@ -129,6 +147,8 @@ void NSCPClient::add_command(std::wstring key, std::wstring args) {
 			list.push_back(*beg);
 		}
 
+		po::options_description desc("Availible options");
+		desc.add(common).add(query).add(submit);
 		po::wparsed_options parsed = po::basic_command_line_parser<wchar_t>(list).options(desc).positional(p).run();
 		po::store(parsed, vm);
 		po::notify(vm);
@@ -168,7 +188,7 @@ std::list<std::string> collect_result(std::list<std::string> payloads, int &ret)
 			ret = nscapi::plugin_helper::maxState(ret, nscapi::functions::gbp_to_nagios_status(payload.result()));
 			std::string line = payload.message();
 
-			// @todo: Add performance data parsin here!
+			// @todo: Add performance data parsing here!
 			//nscapi::functions::parse_performance_data(payload, perf);
 			//if (!payload.perf().empty())
 			//	line += _T("|") + payload;
@@ -181,6 +201,9 @@ std::list<std::string> collect_result(std::list<std::string> payloads, int &ret)
 
 NSCAPI::nagiosReturn NSCPClient::handleCommand(const std::wstring &target, const std::wstring &command, std::list<std::wstring> &arguments, std::wstring &message, std::wstring &perf) {
 	if (command == _T("query_nscp")) {
+		return query_nscp(arguments, message, perf);
+	}
+	if (command == _T("submit_nscp")) {
 		return query_nscp(arguments, message, perf);
 	}
 	command_list::const_iterator cit = commands.find(command);
@@ -204,8 +227,13 @@ NSCAPI::nagiosReturn NSCPClient::query_nscp(std::list<std::wstring> &arguments, 
 		NSCPClient::nscp_connection_data command_data;
 		boost::program_options::variables_map vm;
 
+		po::options_description common("Common options");
+		add_common_options(common, command_data);
+		po::options_description query("Query options");
+		add_query_options(query, command_data);
+
 		po::options_description desc("Allowed options");
-		add_options(desc, command_data);
+		desc.add(common).add(query);
 
 		std::vector<std::wstring> vargs(arguments.begin(), arguments.end());
 		po::positional_options_description p;
@@ -234,15 +262,18 @@ NSCAPI::nagiosReturn NSCPClient::query_nscp(std::list<std::wstring> &arguments, 
 	return NSCAPI::returnUNKNOWN;
 }
 
-int NSCPClient::commandLineExec(const std::wstring &command, std::list<std::wstring> &arguments, std::wstring &result) {
-	if (command != _T("query_nscp") && command != _T("help"))
-		return NSCAPI::returnIgnored;
+bool NSCPClient::submit_nscp(std::list<std::wstring> &arguments, std::wstring &result) {
 	try {
 		NSCPClient::nscp_connection_data command_data;
 		boost::program_options::variables_map vm;
 
+		po::options_description common("Common options");
+		add_common_options(common, command_data);
+		po::options_description submit("Submit options");
+		add_submit_options(submit, command_data);
+
 		po::options_description desc("Allowed options");
-		add_options(desc, command_data);
+		desc.add(common).add(submit);
 
 		std::vector<std::wstring> vargs(arguments.begin(), arguments.end());
 		po::positional_options_description p;
@@ -251,30 +282,94 @@ int NSCPClient::commandLineExec(const std::wstring &command, std::list<std::wstr
 		po::store(parsed, vm);
 		po::notify(vm);
 
-		if (command == _T("help")) {
-			std::stringstream ss;
-			ss << "NSCPClient Command line syntax for command: query" << std::endl;;
-			ss << desc;
-			result = utf8::cvt<std::wstring>(ss.str());
-			return NSCAPI::returnOK;
+
+		std::string buffer;
+		nscapi::functions::create_simple_query_response(command_data.command, command_data.result, command_data.message, _T(""), buffer);
+		std::list<std::string> errors = submit_nscp_command(command_data, buffer);
+		
+		BOOST_FOREACH(std::string e, errors) {
+			result += utf8::cvt<std::wstring>(e) + _T("\n");
 		}
+	} catch (boost::program_options::validation_error &e) {
+		result = _T("Error: ") + utf8::cvt<std::wstring>(e.what());
+		return false;
+	} catch (...) {
+		result = _T("Unknown exception parsing command line");
+		return false;
+	}
+	return true;
+}
+
+
+int NSCPClient::commandLineExec(const std::wstring &command, std::list<std::wstring> &arguments, std::wstring &result) {
+	NSCPClient::nscp_connection_data command_data;
+	if (command == _T("help")) {
+		po::options_description common("Common options");
+		add_common_options(common, command_data);
+		po::options_description query("Query NSCP options");
+		add_query_options(query, command_data);
+		po::options_description submit("Submit NSCP options");
+		add_submit_options(submit, command_data);
+		po::options_description desc("Allowed options");
+		desc.add(common).add(query).add(submit);
+
+		std::stringstream ss;
+		ss << "NSCPClient Command line syntax for command: query_nscp and submit_nscp" << std::endl;;
+		ss << desc;
+		result = utf8::cvt<std::wstring>(ss.str());
+		return NSCAPI::returnOK;
+	} else if (command == _T("query_nscp")) {
+		boost::program_options::variables_map vm;
+
+		po::options_description common("Common options");
+		add_common_options(common, command_data);
+		po::options_description query("Query NSCP options");
+		add_query_options(query, command_data);
+		po::options_description desc("Allowed options");
+		desc.add(common).add(query);
+
+		std::vector<std::wstring> vargs(arguments.begin(), arguments.end());
+		po::positional_options_description p;
+		p.add("arguments", -1);
+		po::wparsed_options parsed = po::basic_command_line_parser<wchar_t>(vargs).options(desc).positional(p).run();
+		po::store(parsed, vm);
+		po::notify(vm);
 
 		std::string buffer;
 		nscapi::functions::create_simple_query_request(command_data.command, command_data.arguments, buffer);
 		std::list<std::string> payloads = execute_nscp_command(command_data, buffer);
 		int ret = NSCAPI::returnUNKNOWN;
-		BOOST_FOREACH(std::string p, collect_result(payloads, ret)) {
+		std::list<std::string> strings = collect_result(payloads, ret);
+		BOOST_FOREACH(std::string p, strings) {
 			result += utf8::cvt<std::wstring>(p) + _T("\n");
 		}
 		return ret;
-	} catch (std::exception &e) {
-		result = _T("Error: ") + utf8::cvt<std::wstring>(e.what());
-		return NSCAPI::returnUNKNOWN;
-	} catch (...) {
-		result = _T("Unknown exception processing request");
-		return NSCAPI::returnUNKNOWN;
+	} else if (command == _T("submit_nscp")) {
+		boost::program_options::variables_map vm;
+
+		po::options_description common("Common options");
+		add_common_options(common, command_data);
+		po::options_description submit("Submit  NSCP options");
+		add_submit_options(submit, command_data);
+		po::options_description desc("Allowed options");
+		desc.add(common).add(submit);
+
+		std::vector<std::wstring> vargs(arguments.begin(), arguments.end());
+		po::positional_options_description p;
+		p.add("arguments", -1);
+		po::wparsed_options parsed = po::basic_command_line_parser<wchar_t>(vargs).options(desc).positional(p).run();
+		po::store(parsed, vm);
+		po::notify(vm);
+
+		std::string buffer;
+		nscapi::functions::create_simple_query_response(command_data.command, command_data.result, command_data.message, _T(""), buffer);
+		std::list<std::string> errors = submit_nscp_command(command_data, buffer);
+		BOOST_FOREACH(std::string p, errors) {
+			result += utf8::cvt<std::wstring>(p) + _T("\n");
+		}
+		return NSCAPI::returnOK;
 	}
-	return NSCAPI::returnUNKNOWN;
+	return NSCAPI::returnIgnored;
 }
 std::list<std::string> NSCPClient::execute_nscp_command(nscp_connection_data con, std::string buffer) {
 	std::list<std::string> result;
@@ -284,7 +379,7 @@ std::list<std::string> NSCPClient::execute_nscp_command(nscp_connection_data con
 		chunks.push_back(nscp::packet::create_payload(nscp::data::command_request, buffer, 0));
 		chunks = send(con, chunks);
 		BOOST_FOREACH(nscp::packet &chunk, chunks) {
-			if (chunk.is_command_response()) {
+			if (chunk.is_query_response()) {
 				result.push_back(chunk.payload);
 			} else if (chunk.is_error()) {
 				NSCPIPC::ErrorMessage message;
@@ -304,17 +399,52 @@ std::list<std::string> NSCPClient::execute_nscp_command(nscp_connection_data con
 	}
 }
 
-std::list<nscp::packet> NSCPClient::send(nscp_connection_data &con, const std::list<nscp::packet> &chunks) {
-	std::list<nscp::packet> result;
+std::list<std::string> NSCPClient::submit_nscp_command(nscp_connection_data con, std::string buffer) {
+	std::list<std::string> result;
+	try {
+		std::list<nscp::packet> chunks;
+		chunks.push_back(nscp::packet::create_payload(nscp::data::command_response, buffer, 0));
+		chunks = send(con, chunks);
+		BOOST_FOREACH(nscp::packet &chunk, chunks) {
+			if (chunk.is_query_response()) {
+				result.push_back(chunk.payload);
+			} else if (chunk.is_error()) {
+				NSCPIPC::ErrorMessage message;
+				message.ParseFromString(chunk.payload);
+				for (int i=0;i<message.error_size();i++) {
+					result.push_back("Error: " + message.error(i).message());
+				}
+			} else {
+				NSC_LOG_ERROR_STD(_T("Unsupported message type: ") + strEx::itos(chunk.signature.payload_type));
+			}
+			//NSC_DEBUG_MSG_STD(_T("Found chunk: ") + utf8::cvt<std::wstring>(strEx::format_buffer(chunk.payload.c_str(), chunk.payload.size())));
+		}
+		return result;
+	} catch (std::exception &e) {
+		NSC_LOG_ERROR_STD(_T("Exception: ") + utf8::cvt<std::wstring>(e.what()));
+		return result;
+	}
+}
+
+std::list<nscp::packet> NSCPClient::send(nscp_connection_data &con, std::list<nscp::packet> &chunks) {
+	chunks.push_front(nscp::packet::build_envelope_request(1));
+	std::list<nscp::packet> tmp, result;
 	if (!con.no_ssl) {
 #ifdef USE_SSL
-		result = send_ssl(con.host, con.port, con.timeout, chunks);
+		tmp = send_ssl(con.host, con.port, con.timeout, chunks);
 #else
 		NSC_LOG_ERROR_STD(_T("SSL not avalible (not compiled with USE_SSL)"));
 		result.push_back(nscp::packet::create_error(_T("SSL support not available (compiled without USE_SSL)!")));
 #endif
 	} else {
-		result = send_nossl(con.host, con.port, con.timeout, chunks);
+		tmp = send_nossl(con.host, con.port, con.timeout, chunks);
+	}
+	BOOST_FOREACH(nscp::packet &p, tmp) {
+		if (p.is_envelope_response()) {
+			std::cout << "Got envelope" << std::endl;
+		} else {
+			result.push_back(p);
+		}
 	}
 	return result;
 }
